deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aura
  labels:
    name: aura
    app: aura-system
